--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=nursery
+spring.application.name=water
+server.port =7355
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/nursery
