--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=water
 server.port =7355
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/nursery
-spring.datasource.username=root
-spring.datasource.password=2714
+
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/nursery
+#spring.datasource.username=root
+#spring.datasource.password=2714
+
+spring.datasource.url=jdbc:mariadb://database-1.cdoesi4a691w.ap-northeast-2.rds.amazonaws.com:3306/nursery
+spring.datasource.username=admin
+spring.datasource.password=sw112714
