--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation group: 'com.googlecode.json-simple', name:'json-simple',version: '1.1.1'
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
+
+
 }
 
 tasks.named('test') {
