--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://database-1.cdoesi4a691w.ap-northeast-2.rds.amazonaws.com:3306/nursery
 spring.datasource.username=admin
 spring.datasource.password=sw112714
+
+server.servlet.session.timeout=30
