--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.username=admin
 spring.datasource.password=sw112714
 
 server.servlet.session.timeout=30
+
+#logging.level.org.springframework.cache=DEBUG
+spring.cache.type=caffeine
+spring.cache.cache-names=waterDataCache
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=30m
+
+management.endpoints.web.exposure.include=health,info,caches
