--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation group: 'com.googlecode.json-simple', name:'json-simple',version: '1.1.1'
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
-
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 }
 
